instruments/AIOUSB/Headers/AIOUSB.h

__declspec(dllimport) unsigned long CTR_8254Load(unsigned long DeviceIndex, unsigned long BlockIndex, unsigned long CounterIndex, unsigned short LoadValue);
__declspec(dllimport) unsigned long CTR_8254Mode(unsigned long DeviceIndex, unsigned long BlockIndex, unsigned long CounterIndex, unsigned long Mode);
__declspec(dllimport) unsigned long CTR_8254ModeLoad(unsigned long DeviceIndex, unsigned long BlockIndex, unsigned long CounterIndex, unsigned long Mode, unsigned short LoadValue);
__declspec(dllimport) unsigned long CTR_8254Read(unsigned long DeviceIndex, unsigned long BlockIndex, unsigned long CounterIndex, unsigned short *pReadValue);
__declspec(dllimport) unsigned long CTR_8254ReadStatus(unsigned long DeviceIndex, unsigned long BlockIndex, unsigned long CounterIndex, unsigned short *pReadValue, unsigned char *pStatus);
__declspec(dllimport) unsigned long CTR_8254ReadModeLoad(unsigned long DeviceIndex, unsigned long BlockIndex, unsigned long CounterIndex, unsigned long Mode, unsigned short LoadValue, unsigned short *pReadValue);
__declspec(dllimport) unsigned long CTR_StartOutputFreq(unsigned long DeviceIndex, unsigned long CounterIndex, double *pHz);
__declspec(dllimport) unsigned long CTR_8254ReadAll(unsigned long DeviceIndex, unsigned short *pData);
__declspec(dllimport) unsigned long CTR_8254SelectGate(unsigned long DeviceIndex, unsigned long GateIndex);
__declspec(dllimport) unsigned long CTR_8254ReadLatched(unsigned long DeviceIndex, unsigned short *pData);
__declspec(dllimport) unsigned long CTR_SetWaitGates(unsigned long DeviceIndex, unsigned char A, unsigned char B);
__declspec(dllimport) unsigned long CTR_EndWaitGates(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long CTR_WaitForGate(unsigned long DeviceIndex, unsigned char GateIndex, unsigned short *pContent);
__declspec(dllimport) unsigned long CTR_StartMeasuringPulseWidth(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long CTR_StopMeasuringPulseWidth(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long CTR_GetPulseWidthMeasurement(unsigned long DeviceIndex, unsigned long BlockIndex, unsigned long CounterIndex, unsigned short *pReadValue);
__declspec(dllimport) unsigned long DIO_Configure(unsigned long DeviceIndex, unsigned char bTristate, void *pOutMask, void *pData);
__declspec(dllimport) unsigned long DIO_ConfigureEx(unsigned long DeviceIndex, void *pOutMask, void *pData, void *pTristateMask);
__declspec(dllimport) unsigned long DIO_ConfigureMasked(unsigned long DeviceIndex, void *pOuts, void *pOutsMask, void *pData, void *pDataMask, void *pTristates, void *pTristatesMask);
__declspec(dllimport) unsigned long DIO_ConfigurationQuery(unsigned long DeviceIndex, void *pOutMask, void *pTristateMask);
__declspec(dllimport) unsigned long DIO_Read1(unsigned long DeviceIndex, unsigned long BitIndex, unsigned char *Buffer);
__declspec(dllimport) unsigned long DIO_Read8(unsigned long DeviceIndex, unsigned long ByteIndex, unsigned char *pBuffer);
__declspec(dllimport) unsigned long DIO_ReadAll(unsigned long DeviceIndex, void *Buffer);
__declspec(dllimport) unsigned long DIO_Write1(unsigned long DeviceIndex, unsigned long BitIndex, unsigned char bData);
__declspec(dllimport) unsigned long DIO_Write8(unsigned long DeviceIndex, unsigned long ByteIndex, unsigned char Data);
__declspec(dllimport) unsigned long DIO_WriteAll(unsigned long DeviceIndex, void *pData);
__declspec(dllimport) unsigned long DIO_StreamOpen(unsigned long DeviceIndex, unsigned long bIsRead);
__declspec(dllimport) unsigned long DIO_StreamClose(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DIO_StreamFrame(unsigned long DeviceIndex, unsigned long FramePoints, unsigned short *pFrameData, unsigned long *BytesTransferred);
__declspec(dllimport) unsigned long DIO_StreamSetClocks(unsigned long DeviceIndex, double *ReadClockHz, double *WriteClockHz);
__declspec(dllimport) unsigned long DIO_SPI_Read(unsigned long DeviceIndex, unsigned char Address, unsigned char Reg, unsigned char * pValue);
__declspec(dllimport) unsigned long DIO_SPI_Write(unsigned long DeviceIndex, unsigned char Address, unsigned char Reg, unsigned char Value);
__declspec(dllimport) unsigned long DIO_CSA_DoSync(unsigned long DeviceIndex, double * BaseRateHz, double * DurAms, double * DurBms, double * DurCms);
__declspec(dllimport) unsigned long DIO_CSA_DebounceSet(unsigned long DeviceIndex, unsigned long DebounceCounts);
__declspec(dllimport) unsigned long DIO_CSA_DebounceReadAll(unsigned long DeviceIndex, void *pData);
__declspec(dllimport) unsigned long DAC_CSA_SetRangeLimits(unsigned long DeviceIndex, unsigned char *pData);
__declspec(dllimport) unsigned long DAC_CSA_ClearRangeLimits(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DACDIO_WriteAll(unsigned long DeviceIndex, unsigned short *pDACCounts, unsigned char *pDIOData);
__declspec(dllimport) unsigned long DACDirect(unsigned long DeviceIndex, unsigned short Channel, unsigned short Counts);
__declspec(dllimport) unsigned long DACMultiDirect(unsigned long DeviceIndex, void *pDACData, unsigned long DACDataCount);
__declspec(dllimport) unsigned long DACSetBoardRange(unsigned long DeviceIndex, unsigned long RangeCode);
__declspec(dllimport) unsigned long DACSetChannelCal(unsigned long DeviceIndex, unsigned long Channel, char *CalFileName);
__declspec(dllimport) unsigned long DACOutputProcess(unsigned long DeviceIndex, double *ClockHz, unsigned long NumSamples, unsigned short *SampleData);
__declspec(dllimport) unsigned long DACOutputOpen(unsigned long DeviceIndex, double *ClockHz);
__declspec(dllimport) unsigned long DACOutputClose(unsigned long DeviceIndex, unsigned long bWait);
__declspec(dllimport) unsigned long DACOutputCloseNoEnd(unsigned long DeviceIndex, unsigned long bWait);
__declspec(dllimport) unsigned long DACOutputFrame(unsigned long DeviceIndex, unsigned long FramePoints, unsigned short *FrameData);
__declspec(dllimport) unsigned long DACOutputFrameRaw(unsigned long DeviceIndex, unsigned long FramePoints, unsigned short *FrameData);
__declspec(dllimport) unsigned long DACOutputSetCount(unsigned long DeviceIndex, unsigned long NewCount);
__declspec(dllimport) unsigned long DACOutputStart(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DACOutputSetInterlock(unsigned long DeviceIndex, unsigned long bInterlock);
__declspec(dllimport) unsigned long DACOutputSetClock(unsigned long DeviceIndex, double *ClockHz);