instruments/AIOUSB/Headers/AIOUSB.vb


	Public Declare Function CTR_8254Load Lib "AIOUSB" Alias "VBCTR_8254Load" (ByVal DeviceIndex As UInteger, _
		ByVal BlockIndex As UInteger, ByVal CounterIndex As UInteger, ByVal LoadValue As UShort) As UInteger
	Public Declare Function CTR_8254Mode Lib "AIOUSB" Alias "VBCTR_8254Mode" (ByVal DeviceIndex As UInteger, _
		ByVal BlockIndex As UInteger, ByVal CounterIndex As UInteger, ByVal Mode As UInteger) As UInteger
	Public Declare Function CTR_8254ModeLoad Lib "AIOUSB" Alias "VBCTR_8254ModeLoad" (ByVal DeviceIndex As UInteger, _
		ByVal BlockIndex As UInteger, ByVal CounterIndex As UInteger, ByVal Mode As UInteger, ByVal LoadValue As UShort) As UInteger
	Public Declare Function CTR_8254Read Lib "AIOUSB" Alias "VBCTR_8254Read" (ByVal DeviceIndex As UInteger, _
		ByVal BlockIndex As UInteger, ByVal CounterIndex As UInteger, ByRef pReadValue As UShort) As UInteger
	Public Declare Function CTR_8254ReadStatus Lib "AIOUSB" Alias "VBCTR_8254ReadStatus" (ByVal DeviceIndex As UInteger, _
		ByVal BlockIndex As UInteger, ByVal CounterIndex As UInteger, ByRef pReadValue As UShort, ByRef pStatus As Byte) As UInteger
	Public Declare Function CTR_8254ReadModeLoad Lib "AIOUSB" Alias "VBCTR_8254ReadModeLoad" (ByVal DeviceIndex As UInteger, _
		ByVal BlockIndex As UInteger, ByVal CounterIndex As UInteger, ByVal Mode As UInteger, ByVal LoadValue As UShort, ByRef pReadValue As UShort) As UInteger

	Public Declare Function CTR_StartOutputFreq Lib "AIOUSB" Alias "VBCTR_StartOutputFreq" (ByVal DeviceIndex As UInteger, _
		ByVal CounterIndex As UInteger, ByRef pHz As Double) As UInteger

	Public Declare Function CTR_8254ReadAll Lib "AIOUSB" Alias "VBCTR_8254ReadAll" (ByVal DeviceIndex As UInteger, _
		ByRef pData As UShort) As UInteger

	Public Declare Function CTR_8254SelectGate Lib "AIOUSB" Alias "VBCTR_8254SelectGate" (ByVal DeviceIndex As UInteger, _
		ByVal GateIndex As UInteger) As UInteger
	Public Declare Function CTR_8254ReadLatched Lib "AIOUSB" Alias "VBCTR_8254ReadLatched" (ByVal DeviceIndex As UInteger, _
		ByRef pData As UShort) As UInteger
	Public Declare Function CTR_SetWaitGates Lib "AIOUSB" Alias "VBCTR_SetWaitGates" (ByVal DeviceIndex As UInteger, _
		ByVal A As Byte, ByVal B As Byte) As UInteger
	Public Declare Function CTR_EndWaitGates Lib "AIOUSB" Alias "VBCTR_EndWaitGates" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function CTR_WaitForGate Lib "AIOUSB" Alias "VBCTR_WaitForGate" (ByVal DeviceIndex As UInteger, _
		ByVal GateIndex As Byte, ByRef pContent As UShort) As UInteger

	Public Declare Function CTR_StartMeasuringPulseWidth Lib "AIOUSB" Alias "VBCTR_StartMeasuringPulseWidth" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function CTR_StopMeasuringPulseWidth Lib "AIOUSB" Alias "VBCTR_StopMeasuringPulseWidth" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function CTR_GetPulseWidthMeasurement Lib "AIOUSB" Alias "VBCTR_GetPulseWidthMeasurement" (ByVal DeviceIndex As UInteger, _
		ByVal BlockIndex As UInteger, ByVal CounterIndex As UInteger, ByRef pReadValue As UShort) As UInteger



	Public Declare Function DIO_Configure Lib "AIOUSB" Alias "VBDIO_Configure" (ByVal DeviceIndex As UInteger, _
		ByVal bTristate As Byte, ByRef pOutMask As Byte, ByRef pData As Byte) As UInteger
	Public Declare Function DIO_ConfigureEx Lib "AIOUSB" Alias "VBDIO_ConfigureEx" (ByVal DeviceIndex As UInteger, _
		ByRef pOutMask As Byte, ByRef pData As Byte, ByRef pTristateMask As Byte) As UInteger
	Public Declare Function DIO_ConfigureMasked Lib "AIOUSB" Alias "VBDIO_ConfigureMasked" (ByVal DeviceIndex As UInteger, ByRef pOuts As Byte, ByRef pOutsMask As Byte, ByRef pData As Byte, ByRef pDataMask As Byte, ByRef pTristates As Byte, ByRef pTristatesMask As Byte) As UInteger
	Public Declare Function DIO_ConfigurationQuery Lib "AIOUSB" Alias "VBDIO_ConfigurationQuery" (ByVal DeviceIndex As UInteger, _
		ByRef pOutMask As Byte, ByRef pTristateMask As Byte) As UInteger

	Public Declare Function DIO_Read1 Lib "AIOUSB" Alias "VBDIO_Read1" (ByVal DeviceIndex As UInteger, ByVal BitIndex As UInteger, ByRef bData As Byte) As UInteger
	Public Declare Function DIO_Read8 Lib "AIOUSB" Alias "VBDIO_Read8" (ByVal DeviceIndex As UInteger, _
		ByVal ByteIndex As UInteger, ByRef Data As Byte) As UInteger
	Public Declare Function DIO_ReadAll Lib "AIOUSB" Alias "VBDIO_ReadAll" (ByVal DeviceIndex As UInteger, _
		ByRef Data As Byte) As UInteger

	Public Declare Function DIO_Write1 Lib "AIOUSB" Alias "VBDIO_Write1" (ByVal DeviceIndex As UInteger, _
		ByVal BitIndex As UInteger, ByVal bData As Byte) As UInteger
	Public Declare Function DIO_Write8 Lib "AIOUSB" Alias "VBDIO_Write8" (ByVal DeviceIndex As UInteger, _
		ByVal ByteIndex As UInteger, ByVal Data As Byte) As UInteger
	Public Declare Function DIO_WriteAll Lib "AIOUSB" Alias "VBDIO_WriteAll" (ByVal DeviceIndex As UInteger, _
		ByRef Data As Byte) As UInteger



	Public Declare Function DIO_StreamOpen Lib "AIOUSB" Alias "VBDIO_StreamOpen" (ByVal DeviceIndex As UInteger, _
		ByVal bIsRead As UInteger) As UInteger
	Public Declare Function DIO_StreamClose Lib "AIOUSB" Alias "VBDIO_StreamClose" (ByVal DeviceIndex As UInteger) As UInteger
	Public Declare Function DIO_StreamFrame Lib "AIOUSB" Alias "VBDIO_StreamFrame" (ByVal DeviceIndex As UInteger, _
		ByVal FramePoints As UInteger, ByRef pFrameData As UShort, ByRef BytesTransferred As UInteger) As UInteger
	Public Declare Function DIO_StreamSetClocks Lib "AIOUSB" Alias "VBDIO_StreamSetClocks" (ByVal DeviceIndex As UInteger, _
		ByRef ReadClockHz As Double, ByRef WriteClockHz As Double) As UInteger

	Public Declare Function DIO_SPI_Read Lib "AIOUSB" Alias "VBDIO_SPI_Read" (ByVal DeviceIndex As UInteger, _
		ByVal Address As Byte, ByVal Reg As Byte, ByRef pValue As Byte) As UInteger
	Public Declare Function DIO_SPI_Write Lib "AIOUSB" Alias "VBDIO_SPI_Write" (ByVal DeviceIndex As UInteger, _
		ByVal Address As Byte, ByVal Reg As Byte, ByVal Value As Byte) As UInteger

	Public Declare Function DIO_CSA_DoSync Lib "AIOUSB" Alias "VBDIO_CSA_DoSync" (ByVal DeviceIndex As UInteger, _
		ByRef BaseRateHz As Double, ByRef DurAms As Double, ByRef DurBms As Double, ByRef DurCms As Double) As UInteger
	Public Declare Function DIO_CSA_DebounceSet Lib "AIOUSB" Alias "VBDIO_CSA_DebounceSet" (ByVal DeviceIndex As UInteger, _
		ByVal DebounceCounts As UInteger) As UInteger
	Public Declare Function DIO_CSA_DebounceReadAll Lib "AIOUSB" Alias "VBDIO_CSA_DebounceReadAll" (ByVal DeviceIndex As UInteger, _
		ByRef pData As Byte) As UInteger

	Public Declare Function DAC_CSA_SetRangeLimits Lib "AIOUSB" Alias "DAC_CSA_SetRangeLimits" (ByVal DeviceIndex As UInteger, ByRef pData As Byte) As UInteger
	Public Declare Function DAC_CSA_ClearRangeLimits Lib "AIOUSB" Alias "DAC_CSA_ClearRangeLimits" (ByVal DeviceIndex As UInteger) As UInteger

	Public Declare Function DACDIO_WriteAll Lib "AIOUSB" Alias "DACDIO_WriteAll" (ByVal DeviceIndex As UInteger, ByRef pDACCounts As UShort, ByRef pDIOData As Byte) As UInteger



	Public Declare Function DACDirect Lib "AIOUSB" Alias "VBDACDirect" (ByVal DeviceIndex As UInteger, _
		ByVal Channel As UInteger, ByVal Counts As UShort) As UInteger
	Public Declare Function DACMultiDirect Lib "AIOUSB" Alias "VBDACMultiDirect" (ByVal DeviceIndex As UInteger, _
		ByRef pDACData As DACChange, ByVal DACDataCount As UInteger) As UInteger
	Public Declare Function DACSetBoardRange Lib "AIOUSB" Alias "VBDACSetBoardRange" (ByVal DeviceIndex As UInteger, ByVal RangeCode As UInteger) As UInteger
	Public Declare Function DACSetChannelCal Lib "AIOUSB" Alias "VBDACSetChannelCal" (ByVal DeviceIndex As UInteger, ByVal Channel As UInteger, ByVal CalFileName As String) As UInteger

	Public Declare Function DACOutputOpen Lib "AIOUSB" Alias "VBDACOutputOpen" (ByVal DeviceIndex As UInteger, _
		ByRef ClockHz As Double) As UInteger
	Public Declare Function DACOutputClose Lib "AIOUSB" Alias "VBDACOutputClose" (ByVal DeviceIndex As UInteger, _
		ByVal bWait As UInteger) As UInteger
	Public Declare Function DACOutputCloseNoEnd Lib "AIOUSB" Alias "VBDACOutputCloseNoEnd" (ByVal DeviceIndex As UInteger, ByVal bWait As UInteger) As UInteger
	Public Declare Function DACOutputFrame Lib "AIOUSB" Alias "VBDACOutputFrame" (ByVal DeviceIndex As UInteger, _
		ByVal FramePoints As UInteger, ByRef FrameData As DACDataPoint) As UInteger
	Public Declare Function DACOutputFrameRaw Lib "AIOUSB" Alias "VBDACOutputFrameRaw" (ByVal DeviceIndex As UInteger, ByVal FramePoints As UInteger, ByRef FrameData As UShort) As UInteger
	Public Declare Function DACOutputSetCount Lib "AIOUSB" Alias "VBDACOutputSetCount" (ByVal DeviceIndex As UInteger, _
		ByVal NewCount As UInteger) As UInteger
	Public Declare Function DACOutputSetInterlock Lib "AIOUSB" Alias "VBDACOutputSetInterlock" (ByVal DeviceIndex As UInteger, ByVal bInterlock As UInteger) As UInteger
	Public Declare Function DACOutputSetClock Lib "AIOUSB" Alias "VBDACOutputSetClock" (ByVal DeviceIndex As UInteger, ByRef ClockHZ As Double) As UInteger
	Public Declare Function DACOutputStart Lib "AIOUSB" Alias "VBDACOutputStart" (ByVal DeviceIndex As UInteger) As UInteger

	Public Declare Function DACOutputProcess Lib "AIOUSB" Alias "VBDACOutputProcess" (ByVal DeviceIndex As UInteger, ByRef ClockHz As Double, ByVal NumSamples As UInteger, ByRef SampleData As UShort) As UInteger

	'Note that all error codes returned are Windows error codes; they can be found in winerror.h in the Windows SDK, or on the Web.

End Module
